--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,8 +1,9 @@
 .header-link{
   display:flex;
   justify-content: space-around;
-  /* align-items: center; */
+  align-items: center;
   margin: 0px 100px;
+  
   
     
     
