--- a/src/Components/Home/Banner.css
+++ b/src/Components/Home/Banner.css
@@ -1,15 +1,15 @@
 
 
-img{
+.banner img{
     border-radius:50%;
-    width: 60%;
-    margin: 100px 0 0 150px;
+    width: 70%;
+    margin: 100px 0 20px 150px;
    
 }
 
 .fact{
     width:50%; 
-    margin:150px 0 0 100px;
+    margin:250px 0 0 100px;
 }
 
 
@@ -17,6 +17,7 @@ img{
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding:0;
+    height: 90vh;
     
 }
 
@@ -27,14 +28,15 @@ img{
         grid-template-columns: 1fr;
         margin: 0;
         padding:30px 40px;
+        width: 100%;
 
     }
 
-    img{
+    .banner img{
         width: 85%;
         margin: 10px 0 0 20px;
-
     }
+
 
     .fact{
         width:100%; 
